--- a/KhuyenMai/packages.config
+++ b/KhuyenMai/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.11" targetFramework="net452" />
+  <package id="Tulpep.NotificationWindow" version="1.1.25" targetFramework="net452" />
 </packages>
