--- a/KhuyenMai/packages.config
+++ b/KhuyenMai/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.11" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net452" />
